[package]
name = "rp2040-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use the critical section feature to protect data behind mutexes to emulate atomics.
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = "0.12.0"

[[example]]
name = "hello_world"
