[package]
name = "rp2040-demo"
version = "0.1.0"
edition = "2024"

[dependencies]
# Use the critical section feature to protect data behind mutexes to emulate atomics.
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embedded-hal = "1.0.0"
rp2040-boot2 = "0.3.0"
rp2040-hal = { version = "0.12.0", features = ["critical-section-impl", "rt"] }

[[example]]
name = "hello_world"
busy_polling = "busy_polling"
